# kprototypes

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: api.rst  conf.py  index.rst
example/: abalone.html  abalone.ipynb  pokemon.html  pokemon.ipynb
kprototypes/: __init__.py  distance.py  initialization.py  model.py  optimization.py  similarity.py  sklearn.py  util.py
notebooks/: abalone.ipynb  pokemon.ipynb
src/kprototypes/: __init__.py  initialization.py  model.py  optimization.py  util.py
